fix modal on mobile #664

--- a/web/themes/quartiers_solidaires/assets/components/molecules/card/card.scss
+++ b/web/themes/quartiers_solidaires/assets/components/molecules/card/card.scss
@@ -46,6 +46,7 @@ a.card {
   display: flex;
   position: relative;
   align-items: center;
+  justify-content: space-between;
   margin: -$card-border-width;
   border: $card-border-width solid $card-cap-bg;
   background-color: $card-cap-bg;
