--- a/web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
+++ b/web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
@@ -1,12 +1,10 @@
 @charset 'utf-8';
 
-.modal {
+.modal:not(.fade) {
   @include media-breakpoint-down(xs) {
     position: relative;
   }
-}
 
-.modal:not(.fade) {
   @include media-breakpoint-up(sm) {
     margin-top: 75px;
     margin-bottom: 75px;
@@ -20,6 +18,10 @@
     height: 100vh;
     max-height: 100vh;
     overflow: hidden;
+  }
+
+  .modal {
+    -webkit-overflow-scrolling: touch;
   }
 }
 
